--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamesuite_connect",
-  "version": "1.0.10",
+  "version": "1.1.11",
   "description": "",
   "main": "dist/index.js",
   "files": [
@@ -18,15 +18,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.8.2",
+    "@mysten/dapp-kit": "^0.15.5",
     "@mysten/enoki": "^0.4.25",
     "@mysten/sui": "^1.21.2",
-    "@mysten/wallet-standard": "^0.13.26"
-  },
-  "peerDependencies": {
-    "react": "^19.0.0"
-  },
-  "dependencies": {
-
+    "@mysten/wallet-standard": "^0.13.26",
+    "@tanstack/react-query": "^5.74.4",
+    "@types/react": "^19.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.488.0",
+    "react": "^19.1.0",
+    "tailwind-merge": "^3.2.0",
+    "typescript": "^5.8.2"
   }
 }
